--- a/.github/ISSUE_TEMPLATE/task.yml
+++ b/.github/ISSUE_TEMPLATE/task.yml
@@ -1,54 +1,55 @@
 name: "Task"
-description: "구체적인 기술 작업 단위 (1~3일)"
+description: "Concrete technical work unit (1–3 days)"
 title: "[Task] "
 labels: ["type:task", "status:todo"]
 body:
   - type: textarea
     id: description
     attributes:
-      label: "작업 내용"
-      description: "무엇을 어떻게 구현할 것인지 기술"
+      label: "Task Description"
+      description: "What needs to be implemented and how"
     validations:
       required: true
 
   - type: textarea
     id: checklist
     attributes:
-      label: "완료 체크리스트"
+      label: "Completion Checklist"
       placeholder: |
-        - [ ] 구현
-        - [ ] 코드 리뷰 통과
-        - [ ] 테스트 통과
-        - [ ] 문서 업데이트
+        - [ ] Step 1
+        - [ ] Step 2
+        - [ ] Tests passing
+    validations:
+      required: true
 
   - type: dropdown
     id: area
     attributes:
-      label: "작업 영역"
+      label: "Work Area"
       options:
-        - "backend"
-        - "frontend"
-        - "infra"
-        - "database"
-        - "testing"
-        - "docs"
-        - "devops"
-        - "ai-agent"
+        - backend
+        - frontend
+        - infra
+        - database
+        - api
+        - ai-agent
+        - security
+        - ux
+        - docs
+        - aipm
+    validations:
+      required: true
+
+  - type: textarea
+    id: parent
+    attributes:
+      label: "Parent Story / Feature"
+      placeholder: "Refs #issue"
 
   - type: dropdown
     id: priority
     attributes:
-      label: "우선순위"
-      options:
-        - "P0 - Critical"
-        - "P1 - High"
-        - "P2 - Medium"
-        - "P3 - Low"
+      label: "Priority"
+      options: ["p0 - Critical", "p1 - High", "p2 - Medium", "p3 - Low"]
     validations:
       required: true
-
-  - type: input
-    id: parent_link
-    attributes:
-      label: "상위 Story / Feature"
-      placeholder: "#이슈번호"
