[AO-0] chore(ops): sync AIPM governance v1.0.0 (F1-F13 fixes)
Bootstrap propagation of audit findings:
- F1: Fix agent dispatch double-trigger
- F3/F4: Mandate issue-log plan/progress/result
- F6: Unify [PM] managed block (English)
- F7: prepare-commit-msg regex improvement
- F8: Add [AIPM-CHECK] command
- F9: Update model to claude-sonnet-4-6
- F10: Add /block /unblock status automation
- F12: Add [pm] done / [pm] close
- F13: issue-log.sh argument parsing improvement

Refs #0

--- a/.github/workflows/ai-agent-dispatch.yml
+++ b/.github/workflows/ai-agent-dispatch.yml
@@ -1,4 +1,3 @@
-# Managed by AIPM Ops Bootstrap
 name: AI Agent Dispatch
 
 on:
@@ -27,7 +26,7 @@ jobs:
         uses: anthropics/claude-code-action@v1
         with:
           anthropic_api_key: ${{ secrets.ANTHROPIC_API_KEY }}
-          model: "claude-sonnet-4-20250514"
+          model: "claude-sonnet-4-6"
           max_turns: 25
 
   dispatch-codex:
@@ -53,7 +52,10 @@ jobs:
   dispatch-auto:
     if: |
       (github.event_name == 'issues' && github.event.label.name == 'agent:auto') ||
-      (github.event_name == 'issue_comment' && contains(github.event.comment.body, '@ai-agent'))
+      (github.event_name == 'issue_comment' &&
+       contains(github.event.comment.body, '@ai-agent') &&
+       !contains(github.event.comment.body, '@ai-agent claude') &&
+       !contains(github.event.comment.body, '@ai-agent codex'))
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -65,9 +67,10 @@ jobs:
         with:
           fetch-depth: 1
 
+      # Default backend: Claude (configurable via repo variable)
       - name: Run default agent
         uses: anthropics/claude-code-action@v1
         with:
           anthropic_api_key: ${{ secrets.ANTHROPIC_API_KEY }}
-          model: ${{ vars.AI_AGENT_DEFAULT_MODEL || 'claude-sonnet-4-20250514' }}
+          model: ${{ vars.AI_AGENT_DEFAULT_MODEL || 'claude-sonnet-4-6' }}
           max_turns: 25
