--- a/.github/workflows/issue-status-sync.yml
+++ b/.github/workflows/issue-status-sync.yml
@@ -1,4 +1,3 @@
-# Managed by AIPM Ops Bootstrap
 name: Issue Status Sync
 
 on:
@@ -6,6 +5,8 @@ on:
     types: [assigned, closed, reopened]
   pull_request:
     types: [opened, closed]
+  issue_comment:
+    types: [created]
 
 jobs:
   sync-labels:
@@ -71,6 +72,16 @@ jobs:
               } else if (action === 'closed') {
                 await setStatus(issueNumber, 'status:done');
               } else if (action === 'reopened') {
+                await setStatus(issueNumber, 'status:in-progress');
+              }
+            }
+
+            if (event === 'issue_comment') {
+              const body = context.payload.comment.body || '';
+              const issueNumber = context.payload.issue.number;
+              if (/^\s*\/block\b/i.test(body)) {
+                await setStatus(issueNumber, 'status:blocked');
+              } else if (/^\s*\/unblock\b/i.test(body)) {
                 await setStatus(issueNumber, 'status:in-progress');
               }
             }
